fix misc markup issues

--- a/index.html
+++ b/index.html
@@ -3088,8 +3088,8 @@
                   <li data-id="checklist_1_114">
                     <a
                       href="https://thelordsofthefallen.wiki.fextralife.com/Fitzroy's+Sword"
-                      >ord<br
-                    /></a>
+                      >Fitzroy's Sword</a
+                    >
                   </li>
                   <li data-id="checklist_1_115">
                     <a
@@ -3144,7 +3144,7 @@
                     <a
                       href="https://thelordsofthefallen.wiki.fextralife.com/Thorned+Crimson+Rector+Sword"
                       target="_blank"
-                      >width="75" />Thorned Crimson Rector Sword</a
+                      >Thorned Crimson Rector Sword</a
                     >
                   </li>
                   <li data-id="checklist_1_123">
