open locations in new tab

--- a/index.html
+++ b/index.html
@@ -9818,114 +9818,133 @@
                 <li data-id="checklist_14_1">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Defiled+Sepulchre"
+                    target="_blank"
                     >Defiled Sepulchre</a
                   >
                 </li>
                 <li data-id="checklist_14_2">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Abandoned+Redcopse"
+                    target="_blank"
                     >Abandoned Redcopse</a
                   >
                 </li>
                 <li data-id="checklist_14_3">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Skyrest+Bridge"
+                    target="_blank"
                     >Skyrest Bridge</a
                   >
                 </li>
                 <li data-id="checklist_14_4">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Pilgrim's+Perch"
+                    target="_blank"
                     >Pilgrim's Perch</a
                   >
                 </li>
                 <li data-id="checklist_14_5">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Forsaken+Fen"
+                    target="_blank"
                     >Forsaken Fen</a
                   >
                 </li>
                 <li data-id="checklist_14_6">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Fitzroy's+Gorge"
+                    target="_blank"
                     >Fitzroy's Gorge</a
                   >
                 </li>
                 <li data-id="checklist_14_7">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Lower+Calrath"
+                    target="_blank"
                     >Lower Calrath</a
                   >
                 </li>
                 <li data-id="checklist_14_8">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Upper+Calrath"
+                    target="_blank"
                     >Upper Calrath</a
                   >
                 </li>
                 <li data-id="checklist_14_9">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Sunless+Skein"
+                    target="_blank"
                     >Sunless Skein</a
                   >
                 </li>
                 <li data-id="checklist_14_10">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Cistern"
+                    target="_blank"
                     >Cistern</a
                   >
                 </li>
                 <li data-id="checklist_14_11">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Fief+of+the+Chill+Curse"
+                    target="_blank"
                     >Fief of the Chill Curse</a
                   >
                 </li>
                 <li data-id="checklist_14_12">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Revelation+Depths"
+                    target="_blank"
                     >Revelation Depths</a
                   >
                 </li>
                 <li data-id="checklist_14_13">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Path+of+Devotion"
+                    target="_blank"
                     >Path of Devotion</a
                   >
                 </li>
                 <li data-id="checklist_14_14">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Manse+of+the+Hallowed+Brothers"
+                    target="_blank"
                     >Manse of the Hallowed Brothers</a
                   >
                 </li>
                 <li data-id="checklist_14_15">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Tower+of+Penance"
+                    target="_blank"
                     >Tower of Penance</a
                   >
                 </li>
                 <li data-id="checklist_14_16">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Abbey+of+the+Hallowed+Sisters"
+                    target="_blank"
                     >Abbey of the Hallowed Sisters</a
                   >
                 </li>
                 <li data-id="checklist_14_17">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/The+Empyrean"
+                    target="_blank"
                     >The Empyrean</a
                   >
                 </li>
                 <li data-id="checklist_14_18">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Bramis+Castle"
+                    target="_blank"
                     >Bramis Castle</a
                   >
                 </li>
                 <li data-id="checklist_14_19">
                   <a
                     href="https://thelordsofthefallen.wiki.fextralife.com/Mother's+Lull"
+                    target="_blank"
                     >Mother's Lull</a
                   >
                 </li>
