update meta description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Completionist's guide, checklist, & cheat-sheet for Lords of the Fallen (2023)."
+      content="A completionist's guide, checklist, & cheat-sheet for Lords of the Fallen (2023)."
     />
     <meta name="author" content="colewaldrip" />
     <link
@@ -56,7 +56,7 @@
       <div id="intro">
         <h1>Lords of the Fallen (2023) Checklist</h1>
         <p>
-          Completionist's guide, checklist, & cheat-sheet for Lords of the
+          A completionist's guide, checklist, & cheat-sheet for Lords of the
           Fallen (2023).
         </p>
         <p>
