add open graph img & update meta tags

--- a/index.html
+++ b/index.html
@@ -6,13 +6,32 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>Lords of the Fallen (2023) Checklist</title>
+    <title>Lords of the Fallen (2023) Checklist & Cheat Sheet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A completionist's guide, checklist, & cheat-sheet for Lords of the Fallen (2023)."
+      content="A completionist's guide, checklist, & cheat sheet for Lords of the Fallen (2023)."
     />
     <meta name="author" content="colewaldrip" />
+    <meta
+      property="og:title"
+      content="Lords of the Fallen (2023) Checklist & Cheat Sheet"
+    />
+    <meta
+      property="og:description"
+      content="A completionist's guide, checklist, & cheat sheet for Lords of the Fallen (2023)."
+    />
+    <meta
+      property="og:url"
+      content="https://colewaldrip.github.io/lotf-2023-checklist/"
+    />
+    <meta
+      property="og:image"
+      content="https://colewaldrip.github.io/lotf-2023-checklist/img/og.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <link
       id="bootstrap"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -21,9 +40,7 @@
     />
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/andris9/jStorage/v0.4.12/jstorage.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -54,9 +71,9 @@
 
     <div class="container">
       <div id="intro">
-        <h1>Lords of the Fallen (2023) Checklist</h1>
+        <h1>Lords of the Fallen (2023) Checklist & Cheat Sheet</h1>
         <p>
-          A completionist's guide, checklist, & cheat-sheet for Lords of the
+          A completionist's guide, checklist, & cheat sheet for Lords of the
           Fallen (2023).
         </p>
         <p>
