add contribution guide to README

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
             <a href="#tabPlaythrough" data-toggle="tab">Playthrough</a>
           </li>
           <li><a href="#tabChecklists" data-toggle="tab">Checklists</a></li>
+          <li>
+            <a
+              href="https://github.com/colewaldrip/lotf-2023-checklist"
+              target="_blank"
+              >GitHub</a
+            >
+          </li>
         </ul>
         <div class="profile" style="float: right; padding-top: 8px">
           <div class="input-append">
@@ -71,10 +78,21 @@
 
     <div class="container">
       <div id="intro">
+        <img
+          src="img/og.png"
+          class="img-responsive"
+          alt="Lords of the Fallen (2023) Checklist & Cheat Sheet"
+        />
+        <br />
         <h1>Lords of the Fallen (2023) Checklist & Cheat Sheet</h1>
         <p>
-          A completionist's guide, checklist, & cheat sheet for Lords of the
-          Fallen (2023).
+          Welcome to the completionist's guide, checklist, & cheat sheet for
+          Lords of the Fallen (2023). This guide aims to provide a comprehensive
+          suite of checklists for players to use as a sort of cheat sheet during
+          playthroughs of
+          <a href="https://lordsofthefallen.com" target="_blank"
+            >Lords of the Fallen</a
+          >.
         </p>
         <p>
           <em>Warning: Contains Spoilers!</em>
