--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Lords of the Fallen (2023) Checklist & Cheat Sheet</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://colewaldrip.github.io/lotf-2023-checklist/img/favicon.ico"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
