add shields (whoops)

--- a/index.html
+++ b/index.html
@@ -3218,6 +3218,7 @@
                           href="https://thelordsofthefallen.wiki.fextralife.com/Horned+Skull"
                           >Horned Skull</a
                         >
+                        (NEW)
                       </li>
                     </ul>
                   </div>
@@ -3719,12 +3720,14 @@
                           href="https://thelordsofthefallen.wiki.fextralife.com/Punishment"
                           >Punishment</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_1_138">
                         <a
                           href="https://thelordsofthefallen.wiki.fextralife.com/Judgement"
                           >Judgement</a
                         >
+                        (NEW)
                       </li>
                     </ul>
                   </div>
@@ -4061,6 +4064,245 @@
                           href="https://thelordsofthefallen.wiki.fextralife.com/Veil-Piercer"
                           target="_blank"
                           >Veil-Piercer</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col col-12 col-md-6 col-lg-3">
+                    <h5>Light Shields</h5>
+                    <ul>
+                      <li data-id="checklist_1_185">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Blackfeather+Ranger+Shield"
+                          target="_blank"
+                          >Blackfeather Ranger Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_186">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Boar's+Head+Shield"
+                          target="_blank"
+                          >Boar's Head Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_187">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Envenomed+Shield"
+                          target="_blank"
+                          >Envenomed Sheild</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_188">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Lightreaper's+Shield"
+                          target="_blank"
+                          >Lightreaper's Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_189">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Mournstead+Infantry+Shield"
+                          target="_blank"
+                          >Mournstead Infantry Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_190">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Orian+Preacher+Shield"
+                          target="_blank"
+                          >Orian Preacher Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_191">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Pureblade+Shield"
+                          target="_blank"
+                          >Pureblade Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_192">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Sanctified+Huntress+Shield"
+                          target="_blank"
+                          >Sanctified Huntress Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_193">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Shield+of+Thunder"
+                          target="_blank"
+                          >Shield of Thunder</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_194">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Skinstealer+Shield"
+                          target="_blank"
+                          >Skinstealer Shield</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col col-12 col-md-6 col-lg-3">
+                    <h5>Medium Shields</h5>
+                    <ul>
+                      <li data-id="checklist_1_195">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Crimson+Rector+Shield"
+                          target="_blank"
+                          >Crimson Rector Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_196">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Hallowed+Knight+Shield"
+                          target="_blank"
+                          >Hallowed Knight Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_197">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Lucent+Sword+Shield"
+                          target="_blank"
+                          >Lucent Sword Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_198">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Pale+Eye+Shield"
+                          target="_blank"
+                          >Pale Eye Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_199">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Partisan+Shield"
+                          target="_blank"
+                          >Partisan Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_200">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Plain+Shield"
+                          target="_blank"
+                          >Plain Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_201">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Shield+of+the+First+of+the+Beasts"
+                          target="_blank"
+                          >Shield of the First of the Beasts</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_202">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Trinity+Shield"
+                          target="_blank"
+                          >Trinity Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_203">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Shield+of+the+Moonlit+Emissary"
+                          target="_blank"
+                          >Shield of the Moonlit Emissary</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_204">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Stomund's+Shield"
+                          target="_blank"
+                          >Stomund's Shield</a
+                        >
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col col-12 col-md-6 col-lg-3">
+                    <h5>Heavy Shields</h5>
+                    <ul>
+                      <li data-id="checklist_1_205">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Angel's+Aegis"
+                          target="_blank"
+                          >Angel's Aegis</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_206">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Church+of+Orian+Radiance+Greatshield"
+                          target="_blank"
+                          >Church of Orian Radiance Greatshield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_207">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Fulvirano+Shield"
+                          target="_blank"
+                          >Fulvirano Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_208">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Garish+Display"
+                          target="_blank"
+                          >Garish Display</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_209">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Heavy+Memento"
+                          target="_blank"
+                          >Heavy Memento</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_210">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Miner's+Desperation"
+                          target="_blank"
+                          >Miner's Desperation</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_211">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Ravager+Greatshield"
+                          target="_blank"
+                          >Ravager Greatshield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_212">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Ruiner+Shield"
+                          target="_blank"
+                          >Ruiner Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_213">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Shield+of+the+Hushed+Saint"
+                          target="_blank"
+                          >Shield of the Hushed Saint</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_214">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Shield+of+Whispers"
+                          target="_blank"
+                          >Shield of Whispers</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_215">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Tancred's+Shield"
+                          target="_blank"
+                          >Tancred's Shield</a
+                        >
+                      </li>
+                      <li data-id="checklist_1_216">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Shield+of+Piercing+Light"
+                          target="_blank"
+                          >Shield of Piercing Light</a
                         >
                       </li>
                     </ul>
