add enhanced empyrean grenade

--- a/index.html
+++ b/index.html
@@ -4977,6 +4977,7 @@
                           target="_blank"
                           >Pumpskin Mask</a
                         >
+                        (NEW)
                       </li>
                     </ul>
                   </div>
@@ -6976,18 +6977,18 @@
                         >Defiance Ring</a
                       >
                     </li>
-                    <li data-id="checklist_15_20">
-                      <a
-                        href="https://thelordsofthefallen.wiki.fextralife.com/Dunmire's+Ring"
-                        target="_blank"
-                        >Dunmire's Ring</a
-                      >
-                    </li>
                     <li data-id="checklist_15_21">
                       <a
                         href="https://thelordsofthefallen.wiki.fextralife.com/Envenomed+Ring"
                         target="_blank"
                         >Envenomed Ring</a
+                      >
+                    </li>
+                    <li data-id="checklist_15_20">
+                      <a
+                        href="https://thelordsofthefallen.wiki.fextralife.com/Dunmire's+Ring"
+                        target="_blank"
+                        >Exacter Dunmire's Ring</a
                       >
                     </li>
                     <li data-id="checklist_15_22">
@@ -8219,6 +8220,7 @@
                           target="_blank"
                           >Bursting Grub</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_5_26">
                         <a
@@ -8267,6 +8269,13 @@
                           href="https://thelordsofthefallen.wiki.fextralife.com/Enhanced+Cursed+Effigy"
                           target="_blank"
                           >Enhanced Cursed Effigy</a
+                        >
+                      </li>
+                      <li data-id="checklist_5_64">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Enhanced+Empyrean+Grenade"
+                          target="_blank"
+                          >Enhanced Empyrean Grenade</a
                         >
                       </li>
                       <li data-id="checklist_5_33">
