added misc new tags

--- a/index.html
+++ b/index.html
@@ -8382,6 +8382,7 @@
                           target="_blank"
                           >Explosive Snare</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_5_48">
                         <a
@@ -8424,6 +8425,7 @@
                           target="_blank"
                           >Imbruing Chalice</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_5_54">
                         <a
