add new quests, etc

--- a/index.html
+++ b/index.html
@@ -4579,6 +4579,7 @@
                           target="_blank"
                           >General Engstrom's Helm</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_37">
                         <a
@@ -5236,6 +5237,7 @@
                           target="_blank"
                           >General Engstrom's Armour</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_130">
                         <a
@@ -5864,6 +5866,7 @@
                           target="_blank"
                           >General Engstrom's Gauntlets</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_219">
                         <a
@@ -6457,6 +6460,7 @@
                           target="_blank"
                           >General Engstrom's Leggings</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_303">
                         <a
@@ -8497,6 +8501,7 @@
                           >Umbral Burrower</a
                         >
                       </li>
+                      <li data-id="checklist_5_65">Snowball (NEW)</li>
                     </ul>
                   </div>
                 </div>
@@ -9089,7 +9094,7 @@
                   </div>
 
                   <div class="col col-12 col-md-6 col-lg-3">
-                    <h5>Seasonal Quests</h5>
+                    <h5>New/Seasonal Quests</h5>
                     <ul>
                       <li data-id="checklist_8_19">
                         <a
@@ -9103,6 +9108,34 @@
                           href="https://thelordsofthefallen.wiki.fextralife.com/The+Way+of+the+Bucket"
                           target="_blank"
                           >The Way of the Bucket</a
+                        >
+                      </li>
+                      <li data-id="checklist_8_21">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/General+Engstrom's+Set"
+                          target="_blank"
+                          >General Engstrom's Set</a
+                        >
+                      </li>
+                      <li data-id="checklist_8_22">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Illuminator+Aubrey's+Set"
+                          target="_blank"
+                          >Illuminator Aubrey's Set</a
+                        >
+                      </li>
+                      <li data-id="checklist_8_23">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Herald+of+the+Maw+Set"
+                          target="_blank"
+                          >Herald of the Maw Set</a
+                        >
+                      </li>
+                      <li data-id="checklist_8_24">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Mirror+of+Distortion"
+                          target="_blank"
+                          >Mirror of Distortion</a
                         >
                       </li>
                     </ul>
