fixed link targets, added gilded bucket

--- a/index.html
+++ b/index.html
@@ -3198,25 +3198,37 @@
                       <li data-id="checklist_1_66">
                         <a
                           href="https://thelordsofthefallen.wiki.fextralife.com/Reject's+Blade"
+                          target="_blank"
                           >Reject's Blade</a
                         >
                       </li>
                       <li data-id="checklist_1_67">
                         <a
                           href="https://thelordsofthefallen.wiki.fextralife.com/Shovel-Head"
+                          target="_blank"
                           >Shovel-Head</a
                         >
                       </li>
                       <li data-id="checklist_1_68">
                         <a
                           href="https://thelordsofthefallen.wiki.fextralife.com/Talon"
+                          target="_blank"
                           >Talon</a
                         >
                       </li>
                       <li data-id="checklist_1_69">
                         <a
                           href="https://thelordsofthefallen.wiki.fextralife.com/Horned+Skull"
+                          target="_blank"
                           >Horned Skull</a
+                        >
+                        (NEW)
+                      </li>
+                      <li data-id="checklist_1_217">
+                        <a
+                          href="https://thelordsofthefallen.wiki.fextralife.com/Gilded+Bucket"
+                          target="_blank"
+                          >Gilded Bucket</a
                         >
                         (NEW)
                       </li>
@@ -3276,12 +3288,14 @@
                       <li data-id="checklist_1_77">
                         <a
                           href="https://thelordsofthefallen.wiki.fextralife.com/Stomund's+Flail"
+                          target="_blank"
                           >Stomund's Flail</a
                         >
                       </li>
                       <li data-id="checklist_1_78">
                         <a
                           href="https://thelordsofthefallen.wiki.fextralife.com/Flickering+Flail"
+                          target="_blank"
                           >Flickering Flail</a
                         >
                       </li>
@@ -3718,6 +3732,7 @@
                       <li data-id="checklist_1_137">
                         <a
                           href="https://thelordsofthefallen.wiki.fextralife.com/Punishment"
+                          target="_blank"
                           >Punishment</a
                         >
                         (NEW)
@@ -3725,6 +3740,7 @@
                       <li data-id="checklist_1_138">
                         <a
                           href="https://thelordsofthefallen.wiki.fextralife.com/Judgement"
+                          target="_blank"
                           >Judgement</a
                         >
                         (NEW)
@@ -4615,6 +4631,7 @@
                           target="_blank"
                           >Herald of the Maw Mask</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_42">
                         <a
@@ -4629,6 +4646,7 @@
                           target="_blank"
                           >Illuminator Aubrey's Helm</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_44">
                         <a
@@ -5273,6 +5291,7 @@
                           target="_blank"
                           >Herald of the Maw Armour</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_135">
                         <a
@@ -5294,6 +5313,7 @@
                           target="_blank"
                           >Illuminator Aubrey's Armour</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_138">
                         <a
@@ -5888,6 +5908,7 @@
                           target="_blank"
                           >Herald of the Maw Gauntlets</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_222">
                         <a
@@ -5909,6 +5930,7 @@
                           target="_blank"
                           >Illuminator Aubrey's Gauntlets</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_225">
                         <a
@@ -6482,6 +6504,7 @@
                           target="_blank"
                           >Herald of the Maw Leggings</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_306">
                         <a
@@ -6503,6 +6526,7 @@
                           target="_blank"
                           >Illuminator Aubrey's Leggings</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_309">
                         <a
