flag bucketlord gear as new

--- a/index.html
+++ b/index.html
@@ -4413,6 +4413,7 @@
                           href="https://thelordsofthefallen.wiki.fextralife.com/Bucketlord+Helm"
                           >Bucketlord Helm</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_11">
                         <a
@@ -6314,6 +6315,7 @@
                           target="_blank"
                           >Bucketlord Shoes</a
                         >
+                        (NEW)
                       </li>
                       <li data-id="checklist_2_279">
                         <a
