--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://colewaldrip.github.io/lotf-2023-checklist/img/favicon.ico"
+      href="https://colewaldrip.github.io/lotf-2023-checklist/img/favicon.ico?v=2"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -60,7 +60,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/andris9/jStorage/v0.4.12/jstorage.min.js"></script>
 
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
